Remove unecessary width anf heights to prevent overflow

--- a/style.css
+++ b/style.css
@@ -5,22 +5,12 @@
 }
 
 /* @media only screen and (max-width: 768px) { */
-body {
-  max-width: 100vw;
-}
-
-/* .nav-container {
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  width: 100%;
-} */
 
 .desktop-nav a {
   color: #28352f;
   text-decoration: none;
   margin: 0 10px;
-  padding: 10px 10px;
+  padding: 10px;
   position: relative;
   z-index: 0;
   cursor: pointer;
@@ -51,10 +41,8 @@ body {
 section {
   display: flex;
   flex-direction: column;
-  max-width: 100vw;
   text-align: center;
   align-items: center;
-  margin-left: 8px;
 }
 
 .headline-intro {
@@ -69,16 +57,18 @@ section {
 
 .header-content .intro {
   font-family: 'Inter', sans-serif;
-  width: 327px;
-  height: 192px;
-  font-style: normal;
+
+  /* width: 327px;
+  height: 192px; */
+
+  /* font-style: normal; */
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
   text-align: center;
   color: #172b4d;
   padding: 24px;
-  margin: 32px;
+  margin-top: 32px;
 }
 
 .header-content .hello-span {
@@ -87,23 +77,23 @@ section {
 
 .header-content .bio {
   font-family: 'Inter', sans-serif;
-  width: 327px;
+
+  /* width: 327px; */
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 17px;
   line-height: 28px;
   text-align: center;
   color: #172b4d;
-  padding: 20px 0;
-  margin: 28px;
+  padding: 0 15px;
+  margin-bottom: 25px;
 }
 
 .social-media-icon ul {
-  width: 170.17px;
-  height: 20px;
-  text-align: center;
+  /* width: 170.17px;
+  height: 20px; */
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 auto;
   margin-bottom: 20px;
 }
@@ -124,8 +114,9 @@ section {
 }
 
 .recent-work {
-  width: 327px;
-  height: 97px;
+  /* width: 327px; */
+
+  /* height: 97px; */
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -135,7 +126,7 @@ section {
   text-align: center;
   color: #172b4d;
   margin: 20px auto;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .indicator {
@@ -143,10 +134,6 @@ section {
   display: flex;
   align-items: center;
   text-align: center;
-}
-
-.card-containers {
-  width: 80%;
 }
 
 .card-container {
@@ -158,6 +145,7 @@ section {
   background-color: #d0d9d4;
   border: 1px solid grey;
   margin: 20px 0;
+  margin-left: 15px;
 }
 
 .card {
@@ -165,7 +153,7 @@ section {
   height: 235px;
   width: 100%;
   border-radius: 8px;
-  padding: 10px;
+  padding: 20px 10px 0 10px;
   border-color: #3a4a42;
   background-color: #fff;
 }
@@ -195,9 +183,9 @@ section {
 }
 
 .tags span {
-  margin-top: 10px;
+  margin-top: 7px;
   margin-left: 2px;
-  height: 36px;
+  height: 32px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 600;
@@ -223,10 +211,10 @@ section {
   align-items: center;
   padding: 12px;
   width: 122px;
-  height: 48px;
+  height: 45px;
   border-radius: 4px;
   border-color: #36b37f;
-  margin: 20px auto;
+  margin: 10px auto 0 auto;
 }
 
 .btn a {
@@ -248,9 +236,9 @@ section {
 .about-me-bg .about-img-1 {
   display: block;
   position: absolute;
-  right: -220px;
-  top: -230px;
-  transform: scale(0.2, 0.2);
+  right: -190px;
+  top: -240px;
+  transform: scale(0.15, 0.15);
 }
 
 .about-me-bg .about-img-2 {
@@ -265,8 +253,9 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 355px;
-  height: 240px;
+
+  /* width: 355px;
+  height: 240px; */
   margin: 0 auto;
 }
 
@@ -322,7 +311,7 @@ section {
   height: 355px;
   padding: 50px 8px;
   margin: 20px 0;
-  margin-left: 7px;
+  margin-left: 15px;
 }
 
 .languages h1,
@@ -370,7 +359,7 @@ section {
   height: 355px;
   padding: 35px 15px;
   margin: 20px 0;
-  margin-left: 7px;
+  margin-left: 15px;
 }
 
 .frameworks-tags .frame {
@@ -395,7 +384,7 @@ section {
   height: 355px;
   padding: 30px 15px;
   margin: 20px 0;
-  margin-left: 7px;
+  margin-left: 15px;
 }
 
 .skills-tags a {
@@ -417,10 +406,12 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70%;
+
+  /* width: 70%; */
   text-align: center;
   margin: 0 auto;
   margin-bottom: 30px;
+  padding: 0 25px;
 }
 
 .form-paragraph p {
@@ -438,13 +429,11 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0;
   gap: 24px;
   width: 100%;
   height: 330px;
   margin-bottom: 20px;
-
-  /* margin-left: 10px; */
+  padding: 0 15px;
 }
 
 .form-img-1,
@@ -522,6 +511,8 @@ footer {
 
 .mail-div {
   margin: 20px auto;
+  display: flex;
+  justify-content: center;
 }
 
 .mail-div a {
@@ -641,18 +632,19 @@ footer {
   .card-containers {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    width: 80%;
   }
 
   .about-me-bg {
     position: relative;
     height: 333px;
-    margin: 50px 0;
+    margin: 10px 0 50px 0;
   }
 
   .about-me-bg .about-img-1 {
     display: block;
     position: absolute;
-    right: -59px;
+    right: -29px;
     top: -56px;
     transform: scale(0.4, 0.4);
   }
@@ -660,7 +652,7 @@ footer {
   .about-me-bg .about-img-2 {
     display: block;
     position: absolute;
-    left: -130px;
+    left: -100px;
     bottom: 0;
     top: 164px;
     transform: scale(0.4, 0.4);
@@ -670,9 +662,9 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 58%;
+    width: 53%;
     height: 240px;
-    margin-top: 192px;
+    margin-top: 152px;
   }
 
   .about-me-skils {
